# system-deps

./: Cargo.toml  build.rs
binary/: Cargo.toml
binary/src/: lib.rs
env/: Cargo.toml  build.rs
env/src/: lib.rs
meta/: Cargo.toml  build.rs
meta/src/: lib.rs
src/: lib.rs  metadata.rs  test.rs
