[package]
name = "system-deps"
version = "7.0.3"
authors = [
    "Guillaume Desmottes <guillaume.desmottes@collabora.com>",
    "Josh Triplett <josh@joshtriplett.org>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gdesmott/system-deps"
description = "Discover and configure system dependencies from declarative dependencies in Cargo.toml"
keywords = [
    "pkg-config",
    "build-dependencies",
    "build-depends",
    "manifest",
    "metadata",
]
edition = "2018"
documentation = "https://docs.rs/system-deps/"
readme = "README.md"

[dependencies]
pkg-config = "0.3.25"
toml = { version = "0.8", default-features = false, features = ["parse"] }
version-compare = "0.2"
heck = "0.5"
cfg-expr = { version = "0.17", features = ["targets"] }
system-deps-env = { path = "./env" }

[dev-dependencies]
lazy_static = "1"
itertools = "0.13"
assert_matches = "1.5"

[build-dependencies]
system-deps-env = { path = "./env", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.0", optional = true }
xz = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = [ "binary", "xz" ] # TODO: Delete
binary = [ "dep:system-deps-env", "dep:reqwest" ]
gz = [ "dep:flate2", "dep:tar" ]
xz = [ "dep:xz", "dep:tar" ]
zip = [  ]
