[package]
name = "system-deps-binary"
version = "0.1.0"
edition = "2021"

[dependencies]
system-deps-meta = { path = "../meta" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = { version = "1.0", optional = true }
xz = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true }

[features]
gz = [ "dep:flate2", "dep:tar" ]
xz = [ "dep:xz", "dep:tar" ]
zip = [ "dep:zip" ]
